# fraudstream

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
airflow/: .gitignore  Dockerfile
airflow/config/: bootstrap.py  connections.json  variables.json
airflow/dags/: bronze_to_silver_gold.py  offline_features.py  raw_to_bronze.py
airflow/include/fraudstream_airflow/: assets.py  dag_helpers.py
airflow/scripts/: initialize.sh
configs/flink/: streaming_latency_profile.json
configs/generator/: offline_transactions.json  streaming_transactions.json
datahub/: pyproject.toml
datahub/contracts/: bronze_to_silver_gold.contract.yaml  offline_features.contract.yaml  raw_to_bronze.contract.yaml
datahub/recipes/: postgres.dhub.yaml
datahub/scripts/: publish.sh  start.sh  stop.sh
datahub/src/fraudstream_datahub/: __init__.py  model.py  publish.py
datahub/tests/: test_model.py
docs/: 01_data_generator.md  02_streaming_data_generator.md  02_streaming_generator.md  03_bronze_ingestion.md  04_silver_transactions.md  05_gold_tables.md  06_feature_engineering.md  07_flink_streaming_pipeline.md  08_flink_window_processing.md  09_orchestration_flow.md  10_airflow_workflow_demonstration.md  11_data_governance_datahub.md  12_database_schema.md  13_data_quality_report.md  14_novel_idea_realtime_analytics.md
docs/optimization/flink/: streaming_job_optimization.md
docs/optimization/spark/: silver_job_optimization.md
flink/: .gitignore  pyproject.toml
infra/postgres/init/: 001_create_fraudstream_schema.sql
reports/: data_quality_report.html
src/fraudstream/generators/: offline_transactions.py  streaming_transactions.py
src/fraudstream/jobs/: spark_local_check.py  spark_ui.py
src/fraudstream/jobs/bronze/: ingest_transactions.py  validate_transactions.py
src/fraudstream/jobs/flink/: runtime.py  transactions.py  watermark_calibration.py
src/fraudstream/jobs/gold/: offline_features.py  transactions.py
src/fraudstream/jobs/postgres/: publish.py
src/fraudstream/jobs/silver/: transactions.py
src/fraudstream/orchestration/: validation.py
src/fraudstream/producers/: stream_replay.py
src/fraudstream/reports/: data_quality.py
tests/unit/: test_bronze_ingest_transactions.py  test_bronze_validate_transactions.py  test_data_quality_report.py  test_flink_transactions.py  test_flink_watermark_calibration.py  test_gold_transactions.py  test_offline_transactions.py  test_orchestration_validation.py  test_postgres_publish.py  test_postgres_schema_sql.py  test_silver_transactions.py  test_stream_replay.py  test_streaming_transactions.py
