[project]
name = "financial-fraud-detection"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
kafka = ["confluent-kafka"]
spark = ["pyspark>=4.1,<4.2"]

[project.scripts]
fraudstream-generate-offline = "fraudstream.generators.offline_transactions:main"
fraudstream-generate-streaming = "fraudstream.generators.streaming_transactions:main"
fraudstream-replay-stream = "fraudstream.producers.stream_replay:main"
fraudstream-validate-bronze = "fraudstream.jobs.bronze.validate_transactions:main"
fraudstream-build-silver-transactions = "fraudstream.jobs.silver.transactions:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
