[project]
name = "fraudstream-datahub"
version = "0.1.0"
description = "Isolated DataHub metadata runtime for FraudStream governance"
requires-python = ">=3.11,<3.12"
dependencies = [
    "acryl-datahub[postgres]==1.6.0",
    "pyyaml>=6.0,<7",
]

[project.scripts]
fraudstream-publish-governance = "fraudstream_datahub.publish:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraudstream_datahub"]
